`JMH` 벤치마크(단순 네이티브 콜, AVX2 적용)